# sitemap-rustico

./: Cargo.toml  generate.bat  generate.sh  readme.md
.github/workflows/: generate.yml  test.yml
generate/: Cargo.toml
generate/src/: main.rs
generate/src/models/: mod.rs
generate/src/models/domain_models/: article_type.rs  mod.rs  project.rs
generate/src/models/sitemap_models/: changefreq.rs  freq.rs  mod.rs  url.rs  url_set.rs
scripts/: gen-go-book.bat  gen-go-book.sh
tags/: Cargo.toml
tags/src/: main.rs
