[workspace]
members = ["generate", "tags"]
default-members = ["generate", "tags"]

[workspace.dependencies]
chrono = "0.4.39"
gray_matter = "0.2.8"
# quick-xml = { version = "0.30.0", features = ["serde", "serialize", "arbitrary", "serde-types", "overlapped-lists", "document-features", "encoding", "encoding_rs"]}
quick-xml = { version = "0.37.2", features = ["serialize"]}
serde = {version = "1.0.217", features = ["derive"]}
